Skip to content

lib: cannot tell when media played until the end anymore

Since c338de7b, the EndReached event has been renamed by Stopping. Now, both Stopped and Stopping fire when:

  • libvlc_media_player_stop_async is called by the user.
  • the media plays until the end.

This means LibVLC users cannot easily tell from LibVLC events whether the playback reached the end or not anymore. This was possible in 3.x and it is useful information.

Originally reported by @caprica. /cc @tguillem

To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information