lib: expose media stopping reason via on_media_stopping

Fixes #26819